--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="msg-container">
-      <p id="msg">Play your move</p>
+      <p id="msg">Play your next move</p>
     </div>
     <script src="app.js"></script>
   </body>
